@@ -1348,6 +1348,7 @@ nuttx-0.4.4 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
 	* examples/nsh:  A debug option was left on that can (and does) cause
 	  infinite loops and stack overflows.
+	* net/uip: Correct calculation of checksum on ICMP ping response.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
